--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@ body {
 
 .page-content .head-container .panel {
     margin-top: .24rem;
-    background: rgb(55, 233, 32);
+    background: rgb(43, 32, 190);
     padding: 1.46rem 0 .42rem;
     position: relative
 }
@@ -168,42 +168,66 @@ body {
 
 .page-content .head-container .panel .zhan-yun-qi.popopo .node.node1 {
     -webkit-animation: zhanyunqi 1.7s 1 ease-in-out forwards;
-    animation: zhanyunqi 1.7s 1 ease-in-out forwards
+    animation: zhanyunqi 1.7s 1 ease-in-out forwards;
+    opacity: 0;
+    -webkit-transform: translate(0, -2.19rem) scale(.7);
+    transform: translate(0, -2.19rem) scale(.7);
 }
 
 .page-content .head-container .panel .zhan-yun-qi.popopo .node.node2 {
     -webkit-animation: zhanyunqi 1.7s .25s 1 ease-in-out forwards;
-    animation: zhanyunqi 1.7s .25s 1 ease-in-out forwards
+    animation: zhanyunqi 1.7s .25s 1 ease-in-out forwards;
+    opacity: 0;
+    -webkit-transform: translate(0, -2.19rem) scale(.7);
+    transform: translate(0, -2.19rem) scale(.7);
 }
 
 .page-content .head-container .panel .zhan-yun-qi.popopo .node.node3 {
     -webkit-animation: zhanyunqi 1.7s .5s 1 ease-in-out forwards;
-    animation: zhanyunqi 1.7s .5s 1 ease-in-out forwards
+    animation: zhanyunqi 1.7s .5s 1 ease-in-out forwards;
+    opacity: 0;
+    -webkit-transform: translate(0, -2.19rem) scale(.7);
+    transform: translate(0, -2.19rem) scale(.7);
 }
 
 .page-content .head-container .panel .zhan-yun-qi.popopo .node.node4 {
     -webkit-animation: zhanyunqi 1.7s .75s 1 ease-in-out forwards;
-    animation: zhanyunqi 1.7s .75s 1 ease-in-out forwards
+    animation: zhanyunqi 1.7s .75s 1 ease-in-out forwards;
+    opacity: 0;
+    -webkit-transform: translate(0, -2.19rem) scale(.7);
+    transform: translate(0, -2.19rem) scale(.7);
 }
 
 .page-content .head-container .panel .zhan-yun-qi.popopo .node.node5 {
     -webkit-animation: zhanyunqi 1.7s 1s 1 ease-in-out forwards;
-    animation: zhanyunqi 1.7s 1s 1 ease-in-out forwards
+    animation: zhanyunqi 1.7s 1s 1 ease-in-out forwards;
+    opacity: 0;
+    -webkit-transform: translate(0, -2.19rem) scale(.7);
+    transform: translate(0, -2.19rem) scale(.7);
 }
 
 .page-content .head-container .panel .zhan-yun-qi.popopo .node.node6 {
     -webkit-animation: zhanyunqi 1.7s 1.25s 1 ease-in-out forwards;
-    animation: zhanyunqi 1.7s 1.25s 1 ease-in-out forwards
+    animation: zhanyunqi 1.7s 1.25s 1 ease-in-out forwards;
+    opacity: 0;
+    -webkit-transform: translate(0, -2.19rem) scale(.7);
+    transform: translate(0, -2.19rem) scale(.7);
 }
 
 .page-content .head-container .panel .zhan-yun-qi.popopo .node.node7 {
     -webkit-animation: zhanyunqi 1.7s 1.5s 1 ease-in-out forwards;
-    animation: zhanyunqi 1.7s 1.5s 1 ease-in-out forwards
+    animation: zhanyunqi 1.7s 1.5s 1 ease-in-out forwards;
+    opacity: 0;
+    -webkit-transform: translate(0, -2.19rem) scale(.7);
+    transform: translate(0, -2.19rem) scale(.7);
 }
 
 .page-content .head-container .panel .zhan-yun-qi.popopo .node.node8 {
     -webkit-animation: zhanyunqi 1.7s 1.7s 1 ease-in-out forwards;
-    animation: zhanyunqi 1.7s 1.7s 1 ease-in-out forwards
+    animation: zhanyunqi 1.7s 1.7s 1 ease-in-out forwards;
+    opacity: 0;
+    -webkit-transform: translate(0, -2.19rem) scale(.7);
+    transform: translate(0, -2.19rem) scale(.7);
 }
 
 .popup-mask {
@@ -301,7 +325,7 @@ body {
     100% {
         opacity: 0;
         -webkit-transform: translate(0, -2.19rem) scale(.7);
-        transform: translate(0, -2.19rem) scale(.7)
+        transform: translate(0, -2.19rem) scale(.7);
     }
 }
 
@@ -328,7 +352,7 @@ body {
     100% {
         opacity: 0;
         -webkit-transform: translate(0, -2.19rem) scale(.7);
-        transform: translate(0, -2.19rem) scale(.7)
+        transform: translate(0, -2.19rem) scale(.7);
     }
 }
 
@@ -521,5 +545,16 @@ body {
         transform: scale(1);
         -webkit-transform-origin: left top;
         transform-origin: left top
+    }
+}
+
+.reduce {
+    color: red;
+    display: none;
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+    .reduce {
+        display: block;
     }
 }
